[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = ""
authors = ["YadaYuki <yada.yuki@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
mypy = "^0.910"
flake8-quotes = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
